--- a/Serial_Test/Assembly-CSharp.csproj
+++ b/Serial_Test/Assembly-CSharp.csproj
@@ -64,25 +64,25 @@
   <ItemGroup>
     <Compile Include="Assets\SerialTest.cs" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -268,13 +268,13 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.8f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/JJIYOM/Desktop/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/JIYOUNG.DESKTOP-KDUS7M3/Desktop/example/BalanceBall_Shooting/Serial_Test/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.8f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
